fixed jumping

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -265,6 +265,7 @@ header {
 
                 li {
                     padding: .5rem 0 .5rem 2rem;
+                    -webkit-user-drag: element;
 
                     button {
                         font-size: .75rem;
